# windowsys

./: .gitignore  CMakeLists.txt
session/: CMakeLists.txt  application.cpp  application.h  main.cpp  org.prts.Session.xml  process.cpp  process.h  processmanager.cpp  processmanager.h  prts-wayland.desktop
src/: main.cpp  main.qml
